--- a/app/views/ftf/claim/Archive/email.html
+++ b/app/views/ftf/claim/Archive/email.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMW-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMW-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -126,29 +126,45 @@
             <tr>
               <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474;">
         <![endif]-->
-            
-        
-        
-        
-        
+
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>Business name:</strong> Imaginary Farms Ltd<br>
           <strong>Grant:</strong> Water Management Grant - Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
-        
-          <br>      
-     
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-             <!-- Dear John Smith,<br> -->
-              The claim window is open. You can now start your first claim.<br><br>
-              Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
-            </p>
-            <!--<p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p> -->
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity1">Download and complete the claim form</a></p>
-           <!-- <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"> <p>Read more on <a style="word-wrap: break-word;" href="/_common/not-testing.html">how to fill in a grant application form</a></p>  -->
+          <br>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
+            Dear John Smith,<br><br>
+            Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br><br>
+          </p>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity2">Upload your claim form and evidence</a> and submit your claim.</p>
 
-      
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
+          <br>
+
+          <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>has been purchased (for example, invoices)</li>
+              <li>has been paid for in full (for example, receipts and bank statements)</li>
+              <li>is in place (for example, photos, videos)</li>
+            </ul>
+          </p>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"> <p>Read more on <a style="word-wrap: break-word;" href="/_common/not-testing.html">how to add your evidence</a></p>
+
+          <br>
+
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              <strong>Questions about your claim</strong> 
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+            <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
+            <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+          </div>
+
+          <br>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
         <!--[if (gte mso 9)|(IE)]>
               </td>
