--- a/app/views/ftf/claim/index.html
+++ b/app/views/ftf/claim/index.html
@@ -27,7 +27,11 @@
     <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2">Click to open prototype</a></p>
     
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>FTF Claim v2.3: Pages of evidence</strong></p>
+    <p class="govuk-body"><strong>FTF Claim v2.3: Pages of evidence (proof)</strong></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2">Click to open prototype</a></p>
+
+    <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>FTF Claim v2.4: Pages of evidence (types)</strong></p>
     <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2">Click to open prototype</a></p>
 
   </div>
