--- a/app/views/ftf/claim/v2-1/activity1b.html
+++ b/app/views/ftf/claim/v2-1/activity1b.html
@@ -11,7 +11,6 @@
 
 
 
-
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -22,7 +21,6 @@
     </span>
   </p>
 </div>
-
 
 
 
@@ -64,6 +62,7 @@
       </div>
 
 
+     
       <ol class="govuk-prototype-kit-task-list">
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
@@ -168,17 +167,19 @@
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="download.html" aria-describedby="eligibility-status">
+                <a href="#" aria-describedby="eligibility-status">
                   Download claim form
                 </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="upload1.html" aria-describedby="eligibility-status">
                   Upload claim form and evidence
+                </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
@@ -242,16 +243,15 @@
           </ul>
         </li>
 
-
-
-
-
-
-
-
       </ol>
     </div>
   </div>
+
+
+  <a href="email" aria-describedby="eligibility-status">
+    Move forward 
+  </a>
+
 
 
 </main>
