--- a/app/views/ftf/claim/v2-1/check.html
+++ b/app/views/ftf/claim/v2-1/check.html
@@ -31,7 +31,7 @@
 <br><br><br>
 
 
-
+<!--
       <h2 class="govuk-heading-l">1. Claim form</h2>
 
       <dl class="govuk-summary-list">
@@ -43,18 +43,56 @@
             Claim 1 - Water management.docx , 100KB
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="upload4">
+            <a class="govuk-link" href="upload4.html#form">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
         </div>
       </dl>
         
+-->
+
+
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h2 class="govuk-heading-l" style="margin: 0;">1. Claim form</h2>
+        <a class="govuk-link" href="upload4.html#form" style="font-size: 19px;">Change</a>
+      </div>
+      
+
+<br>
+
+      <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Claim form
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Claim 1 - Water management.docx , 100KB
+          </dd>
+          <dd class="govuk-summary-list__value">
+          </dd>
+        </div>
+      </dl>
+      
+      
+      
+      
+      
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
         <br>
-
-
-
-
 
         <h2 class="govuk-heading-l">2. Evidence</h2>
 
@@ -71,8 +109,8 @@
               Reservoir clips - invoice.pdf , 3MB 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4">
-                Change<span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="upload4.html#evidence">
+                <span class="govuk-visually-hidden"> </span>
               </a>
             </dd>
           </div>
@@ -88,20 +126,20 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="upload4">
-                Change<span class="govuk-visually-hidden"> date of birth</span>
+                <span class="govuk-visually-hidden"> date of birth</span>
               </a>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Proof items are in place
+              Proof items are in place and operational
             </dt>
             <dd class="govuk-summary-list__value">
               (No files added)
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="upload4">
-                Change<span class="govuk-visually-hidden"> address</span>
+                <span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
@@ -115,7 +153,7 @@
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
                   <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4">
-                    Change<span class="govuk-visually-hidden"> contact details</span>
+                    <span class="govuk-visually-hidden"> contact details</span>
                   </a></li>
               </ul>
             </dd>
