--- a/app/views/ftf/claim/v2-2/check.html
+++ b/app/views/ftf/claim/v2-2/check.html
@@ -43,7 +43,7 @@
             Claim 1 - Water management.docx , 100KB
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="upload4">
+            <a class="govuk-link" href="upload4.html#form">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
@@ -54,11 +54,7 @@
 
 
 
-
-
         <h2 class="govuk-heading-l">2. Evidence</h2>
-
-
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -71,7 +67,7 @@
               Reservoir clips - invoice.pdf , 3MB 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4">
+              <a class="govuk-link" href="upload4.html#evidence">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -114,7 +110,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
-                  <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4">
+                  <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4.html">
                     Change<span class="govuk-visually-hidden"> contact details</span>
                   </a></li>
               </ul>
@@ -129,6 +125,16 @@
           Continue
         </button>
       </a>
+
+
+
+
+
+
+
+
+
+
 
 
 
