--- a/app/views/ftf/claim/v2-2/download.html
+++ b/app/views/ftf/claim/v2-2/download.html
@@ -37,7 +37,7 @@
 
     <img src="/public/images/FTF_claim_form.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
         <br><br>
-      <p class="govuk-body-s sbi-number">DOCX, 100 KB, 7 pages.</p>
+      <p class="govuk-body-s sbi-number">DOCX, 97.3 KB, 7 pages.</p>
     </span>
 
     <br><br> 
@@ -60,7 +60,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Do not upload scanned copies or PDFs of this form.
+        Do not upload scanned copies or PDFs of the claim form.
       </strong>
     </div>
 
@@ -72,17 +72,17 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>has been purchased (for example, invoices)</li>
             <li>has been paid for in full (for example, receipts and bank statements)</li>
-            <li>is in place (for example, photos, videos)</li>
+            <li>is in place and operational (for example, photos, videos)</li>
           </ul>
         </p>
     
-        <p><a class="govuk-link" href="/_common/not-testing.html">Check guidance on how to make a claim (opens in a new tab)</a></p>
+        <p><a class="govuk-link" href="/_common/not-testing.html" target="_blank">Check guidance on how to make a claim (opens in a new tab)</a></p>
 
 
-<br><br><br>
+<br>
 
 
-      <a href="email">
+      <a href="activity1b">
         <button class="govuk-button">
           Continue
         </button>
