--- a/app/views/ftf/claim/v2-2/index.html
+++ b/app/views/ftf/claim/v2-2/index.html
@@ -138,16 +138,15 @@
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-              Dear John Smith,<br>
+             <!-- Dear John Smith,<br> -->
               The claim window is open. You can now start your first claim.<br><br>
-              Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br><br>
+              Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
             </p>
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p>
+            <!--<p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p> -->
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity1">Download and complete the claim form</a></p>
-<br>
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"> <p>Read more on <a style="word-wrap: break-word;" href="/_common/not-testing.html">how to fill in a grant application form</a></p>
+           <!-- <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"> <p>Read more on <a style="word-wrap: break-word;" href="/_common/not-testing.html">how to fill in a grant application form</a></p>  -->
 
-            <br>
+      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
