--- a/app/views/ftf/claim/v2-3/upload4.html
+++ b/app/views/ftf/claim/v2-3/upload4.html
@@ -28,8 +28,13 @@
     <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
+
+    <div id="form">
     <h2 class="govuk-heading-l">1. Claim form</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+</div>
+
+
 
     <br><br>
 
@@ -43,7 +48,7 @@
 
 
     <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File added</div>
       <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
         <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
         <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -54,10 +59,13 @@
 
 <br><br>
 
+
+<div id="evidence">
     <h2 class="govuk-heading-l">2. Evidence</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
-
-    <br>
+</div>
+    
+<br>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -85,12 +93,20 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
 <br>
+
+
+
+
+
+<div id="section1">
+  <!-- Content of Section 1 -->
+
 
 <div style="display: flex; justify-content: space-between;">
   <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
@@ -98,6 +114,9 @@
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
+
+
+</div>
 
 
     <br><br><br><br>
