--- a/app/views/ftf/claim/v2-4/financial2.html
+++ b/app/views/ftf/claim/v2-4/financial2.html
@@ -26,8 +26,8 @@
 
 
     <span class="govuk-caption-xl">Upload evidence</span>
-    <h1 class="govuk-heading-xl">Proof items have been paid for</h1>
-    <h2 class="govuk-body" style="margin-top: -20px;">For example, receipts and bank statements (you can cross out other transactions)</h2>
+    <h1 class="govuk-heading-xl">Financial evidence</h1>
+    <h2 class="govuk-body" style="margin-top: -20px;">For example, invoices, receipts and bank statements (you can cross out other transactions)</h2>
   
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
 
@@ -51,22 +51,22 @@
     <div style="width: 630px; height: 321px; position: relative">
       <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
       <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - receipt.pdf , 1MB</div>
+        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
         <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
         <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
       </div>
       <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - receipt.pdf , 1MB</div>
+        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
         <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
         <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
       </div>
       <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - receipt.pdf , 1MB</div>
+        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
         <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
         <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
       </div>
       <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - receipt.pdf , 1MB</div>
+        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
         <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
         <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
       </div>
@@ -89,7 +89,7 @@
 </main>
 
 <br>
-<a href="upload4.html">
+<a href="upload3.html">
   <button class="govuk-button">
     Continue
   </button>
