--- a/app/views/ftf/claim/v2-4/upload1b.html
+++ b/app/views/ftf/claim/v2-4/upload1b.html
@@ -41,12 +41,36 @@
       </strong>
     </div>
 
+
+
+    <!--
     <div class="govuk-form-group">
       <label class="govuk-label" for="file-upload-1">
         <strong>Upload a file</strong>
       </label>
-      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">  -->
+
+
+
+
+
+
+
+
+    <div style="width: 397px; height: 68px; position: relative">
+      <div style="width: 107px; height: 31px; left: 0px; top: 37px; position: absolute">
+        <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
+        <div style="width: 105px; height: 24px; left: 1px; top: 5px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
+      </div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim1_Water_Ma..rant_FTF.docx</div>
+      <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
+
+
+<br><br>
+
+
+    
 
     <a href="upload2.html">
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
@@ -62,33 +86,27 @@
 
     <br>
 
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
-      </strong>
-    </div>
 
+    <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>has been purchased (for example, invoices)</li>
+        <li>has been paid for in full (for example, receipts and bank statements)</li>
+        <li>is in place and operational (for example, photos, videos)</li>
+      </ul>
+    </p>
+
+    <br><br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Financial evidence</strong></a>
 </div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
+<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices, receipts and bank statements (you can cross out other transactions)</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Visual evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -96,7 +114,15 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="..." style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Written evidence</strong></a>
+</div>
+<span class="govuk-body" style="display: block; margin-top: 16px;">For example, emails and letters</span>
+<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
+
+<br>
+
+<div style="display: flex; justify-content: space-between;">
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Outcomes evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
