--- a/app/views/ftf/claim/v2-1/upload1.html
+++ b/app/views/ftf/claim/v2-1/upload1.html
@@ -88,7 +88,7 @@
           
           
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -120,7 +120,7 @@
           
           
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -142,7 +142,7 @@
         <div class="govuk-accordion__section-header">
           <h2 class="govuk-accordion__section-heading">
             <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
-              Proof items are in place
+              Proof items are in place and operational
             </span>
           </h2>
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
@@ -155,7 +155,7 @@
 
 
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -190,7 +190,7 @@
           
 
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -215,12 +215,12 @@
 
 
     <br><br>
-    <button class="govuk-button" data-module="govuk-button">
-      Continue
-    </button>
-
-
-
+ 
+    <a href="activity2.html">
+      <button class="govuk-button" data-module="govuk-button">
+        Continue
+      </button>
+    </a>
 
 
 
