--- a/app/views/ftf/claim/v2-1/upload4.html
+++ b/app/views/ftf/claim/v2-1/upload4.html
@@ -28,8 +28,12 @@
     <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
+
+    <div id="form">
     <h2 class="govuk-heading-l">1. Claim form</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 0px; word-wrap: break-word">Supported file types are DOC and DOCX. Maximum file size is 20MB.</div>
+</div>
+
 
     <br><br>
 
@@ -46,7 +50,7 @@
 
 
     <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
       <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
         <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
         <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -59,10 +63,14 @@
 
 <br><br>
 
+<div id="evidence">
     <h2 class="govuk-heading-l">2. Evidence</h2>
     <div style="width: 609px; color: #505A5F; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</div>
+</div>
+   
 
-    <br>
+
+<br>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -94,7 +102,7 @@
 
 
           <div style="width: 630px; height: 321px; position: relative">
-            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
             <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
               <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
               <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -121,7 +129,7 @@
 
 
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -152,7 +160,7 @@
           
           
           <div style="width: 630px; height: 321px; position: relative">
-            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
+            <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
             <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
               <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - receipt.pdf , 2MB</div>
               <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
@@ -180,7 +188,7 @@
 
 
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -201,7 +209,7 @@
         <div class="govuk-accordion__section-header">
           <h2 class="govuk-accordion__section-heading">
             <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-3">
-              Proof items are in place
+              Proof items are in place and operational
             </span>
           </h2>
           <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
@@ -213,7 +221,7 @@
           
 
           <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
             <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -243,8 +251,8 @@
         <div id="accordion-with-summary-sections-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-4">
           
             <div style="width: 630px; height: 202px; position: relative">
-            <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 24px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-            <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
+              <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
+              <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
             <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
             <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               
