--- a/app/views/ftf/claim/v2-3/activity1.html
+++ b/app/views/ftf/claim/v2-3/activity1.html
@@ -60,7 +60,7 @@
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
 
       <div class="govuk-inset-text">
-        Submit your claim by <strong>31 July 2024</strong>.
+        Submit your claim by 11:59pm on<strong> 31 July 2024</strong>.
       </div>
 
 
