--- a/app/views/ftf/claim/v2-3/check.html
+++ b/app/views/ftf/claim/v2-3/check.html
@@ -43,7 +43,7 @@
             Claim 1 - Water management.docx , 100KB
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="upload4">
+            <a class="govuk-link" href="upload4.html#form">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
@@ -71,7 +71,7 @@
               Reservoir clips - invoice.pdf , 3MB 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="upload4">
+              <a class="govuk-link" href="upload4.html#evidence">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -94,7 +94,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Proof items are in place
+              Proof items are in place and operational
             </dt>
             <dd class="govuk-summary-list__value">
               (No files added)
@@ -118,6 +118,7 @@
                     Change<span class="govuk-visually-hidden"> contact details</span>
                   </a></li>
               </ul>
+
             </dd>
           </div>
         </dl>
