--- a/app/views/ftf/claim/v2-3/email.html
+++ b/app/views/ftf/claim/v2-3/email.html
@@ -132,15 +132,15 @@
           <strong>Project reference:</strong> WM-VMA-1234</p>
           <br>
           <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-            Dear John Smith,<br><br>
-            Your first claim is due by 11:59pm on <strong>31 May 2025</strong>.<br><br>
+            <!--Dear John Smith,<br><br> -->
+            Your claim is due by 11:59pm on <strong>31 May 2025</strong>.<br>
           </p>
-          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p>
-          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity2">Upload your claim form and evidence</a> and submit your claim.</p>
+          <!-- <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>What you need to do</strong></p> -->
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="activity2">Upload your claim form and evidence</a></p>
 
-          <br>
+        
 
-          <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+          <!-- <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
             <ul class="govuk-list govuk-list--bullet">
               <li>has been purchased (for example, invoices)</li>
               <li>has been paid for in full (for example, receipts and bank statements)</li>
@@ -156,13 +156,15 @@
               <strong>Questions about your claim</strong> 
             </span>
           </summary>
+-->
+<br>
           <div class="govuk-details__text">
-            <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+            <p class="govuk-body">If you cannot submit your claim by this date, please contact the RPA.</p>
             <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
             <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
-          </div>
+          </div> 
 
-          <br>
+         <br>
           <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
           <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
 						
