--- a/app/views/ftf/claim/v2-4/activity4.html
+++ b/app/views/ftf/claim/v2-4/activity4.html
@@ -25,8 +25,6 @@
 
 
 
-
-
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper" style="padding-top: 0px; padding-bottom: 0px;">
     <div class="govuk-grid-row" style="padding-top:16px;">
@@ -57,13 +55,14 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
+      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First claim under review</h2>
 
       <div class="govuk-inset-text">
-        Submit your claim by 11:59pm on<strong> 31 July 2024</strong>.
+        The RPA aims to process claims within <strong>30 working days</strong>.
       </div>
 
 
+      
       <ol class="govuk-prototype-kit-task-list">
         <li>
           <h2 class="govuk-prototype-kit-task-list__section">
@@ -168,23 +167,33 @@
           <ul class="govuk-prototype-kit-task-list__items">
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="download.html" aria-describedby="eligibility-status">
+                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
                   Download claim form
                 </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
                   Upload claim form and evidence
+                </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
                   Submit claim
+                </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
+            </li>
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                  Your claim outcome
+              </span>
+              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="contact-details-status">In progress</strong>
             </li>
           </ul>
         </li>
