--- a/app/views/ftf/claim/v2-4/upload1.html
+++ b/app/views/ftf/claim/v2-4/upload1.html
@@ -41,17 +41,37 @@
       </strong>
     </div>
 
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="file-upload-1">
+        <strong>Upload a file</strong>
+      </label>
+    <!--  <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">  -->
 
-    <div style="width: 612px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 700; line-height: 30px; word-wrap: break-word">File added</div>
-      <div style="width: 612px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; line-height: 30px; word-wrap: break-word">Claim 1 - Water management.docx , 100KB</div>
-        <div style="width: 102px; left: 510px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: GDS Transport Website; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 612px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
-      </div>
+
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file" onclick="redirectToPage()">
+     
+     <script>
+        function redirectToPage() {
+          // Get the URL of the page you want to navigate to
+          const nextPageURL = 'upload1b.html';
+      
+          // Redirect to the next page
+          window.location.href = nextPageURL;
+        }
+      </script>
+      
+
+
+
     </div>
 
+    <a href="upload2.html">
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Upload file
+      </button>
+    </a>
 
+    <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
 
     <h2 class="govuk-heading-l">2. Evidence</h2>
@@ -59,33 +79,27 @@
 
     <br>
 
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
-      </strong>
-    </div>
 
+    <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>has been purchased (for example, invoices)</li>
+        <li>has been paid for in full (for example, receipts and bank statements)</li>
+        <li>is in place and operational (for example, photos, videos)</li>
+      </ul>
+    </p>
+
+    <br><br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="purchased1" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Financial evidence</strong></a>
 </div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
+<span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices, receipts and bank statements (you can cross out other transactions)</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
 
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Visual evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -93,7 +107,15 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Written evidence</strong></a>
+</div>
+<span class="govuk-body" style="display: block; margin-top: 16px;">For example, emails and letters</span>
+<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
+
+<br>
+
+<div style="display: flex; justify-content: space-between;">
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Outcomes evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -101,9 +123,11 @@
 
 
     <br><br><br><br>
-    <button class="govuk-button" data-module="govuk-button">
-      Continue
-    </button>
+    <a href="activity2.html">
+      <button class="govuk-button" data-module="govuk-button">
+        Continue
+      </button>
+    </a>
 
 
 
