--- a/app/views/ftf/claim/v2-4/upload2.html
+++ b/app/views/ftf/claim/v2-4/upload2.html
@@ -69,7 +69,7 @@
 
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="purchased1" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been purchased</strong></a>
+  <a href="financial1" style="font-size: 19px; margin-right: 10px;"><strong>Financial evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, invoices</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -77,15 +77,7 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items have been paid for</strong></a>
-</div>
-<span class="govuk-body" style="display: block; margin-top: 16px;">For example, receipts and bank statements (you can cross out other transactions)</span>
-<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof items are in place and operational</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Visual evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">For example, photos and videos</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
@@ -93,11 +85,18 @@
 <br>
 
 <div style="display: flex; justify-content: space-between;">
-  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Proof conditions and outputs have been met</strong></a>
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Written evidence</strong></a>
+</div>
+<span class="govuk-body" style="display: block; margin-top: 16px;">For example, emails and letters</span>
+<div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
+
+<br>
+
+<div style="display: flex; justify-content: space-between;">
+  <a href="/_common/not-testing.html" style="font-size: 19px; margin-right: 10px;"><strong>Outcomes evidence</strong></a>
 </div>
 <span class="govuk-body" style="display: block; margin-top: 16px;">Only for projects with grant-specific conditions and outputs</span>
 <div style="width: 100%; height: 0.5px; background-color: #B1B4B6; margin-top: 5px;"></div>
-
 
 
     <br><br><br><br>
