Claims Activity List logic example

--- a/app/views/ftf/claim/v2-1/download.html
+++ b/app/views/ftf/claim/v2-1/download.html
@@ -83,7 +83,7 @@
 <br>
 
 
-      <a href="activity1b">
+      <a href="activity1?04-01=complete">
         <button class="govuk-button">
           Continue
         </button>
