Update Activity list main task

--- a/app/views/ftf/claim/v2-3/activity4.html
+++ b/app/views/ftf/claim/v2-3/activity4.html
@@ -45,7 +45,7 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First claim under review</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">First claim under review</h2>
 
       <div class="govuk-inset-text">
         The RPA aims to process claims within <strong>30 working days</strong>.
