--- a/app/views/ftf/claim/v2-1/activity1.html
+++ b/app/views/ftf/claim/v2-1/activity1.html
@@ -57,7 +57,7 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">First grant claim window is open</h2>
 
       <div class="govuk-inset-text">
         Submit your claim by 11:59pm on<strong> 31 July 2024</strong>.
@@ -166,6 +166,9 @@
             <span class="govuk-prototype-kit-task-list__section-number">4. </span> Submit first claim
           </h2>
           <ul class="govuk-prototype-kit-task-list__items">
+            
+            
+           
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
@@ -174,6 +177,21 @@
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+
+
+
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="download.html" aria-describedby="eligibility-status">
+                  Download claim form
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+
+
+
+
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                   Upload claim form and evidence
