--- a/app/views/ftf/claim/v2-4/activity1b.html
+++ b/app/views/ftf/claim/v2-4/activity1b.html
@@ -55,7 +55,7 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">First grant claim window is open</h2>
 
       <div class="govuk-inset-text">
         Submit your claim by 11:59pm on<strong> 31 July 2024</strong>.
